--- a/home.html
+++ b/home.html
@@ -46,5 +46,14 @@
 
             </div>
 
+<ul class='footer'>
+        <li><a href="jobvacancies.html">Job Vacancies</a></li>
+        <li> Address </li>
+        <li> Number </li>
+        <li> Email </li>
+</ul>
+<p> Copyright (C) 2017 Munchies Cakeaway York </p>
+<p> 
+
     </body>
 </html>
