added links for shopify/POS

--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
         <li> Email </li>
 </ul>
 <p> Copyright (C) 2017 Munchies Cakeaway York </p>
-<p> 
+<p><a href="https://www.shopify.co.uk/pos">POS</a> and <a href="https://www.shopify.co.uk/"></a></p>
 
     </body>
 </html>
