--- a/home.html
+++ b/home.html
@@ -47,6 +47,7 @@
             </div>
 
 <ul class='footer'>
+<div id="fixedBar">content inside bar goes here
         <li><a href="jobvacancies.html">Job Vacancies</a></li>
         <li> Address </li>
         <li> Number </li>
@@ -54,6 +55,6 @@
 </ul>
 <p> Copyright (C) 2017 Munchies Cakeaway York </p>
 <p> 
-
+</div>
     </body>
 </html>
