--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
         <li> Number </li>
         <li> Email </li>
 </ul>
-<p> Copyright (C) 2017 Munchies Cakeaway York </p>
+<p> Copyright © 2017 Munchies Cakeaway York </p>
 <p><a href="https://www.shopify.co.uk/pos">POS</a> and <a href="https://www.shopify.co.uk/"></a></p>
 
     </body>
