div class instead of id

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
             </div>
 
 <ul class='footer'>
-<div id="fixedBar">content inside bar goes here
+<div class="fixedBar">content inside bar goes here
         <li><a href="jobvacancies.html">Job Vacancies</a></li>
         <li> Address </li>
         <li> Number </li>
