sticky footer instead of fixed bottom bar

--- a/home.html
+++ b/home.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+<div id="wrap">
     <head>
         <title>Munchies Cakeaway York</title>
         <link rel="stylesheet" type="text/css" href="munchies.css">
     </head>
+    <div id="main">
     <body>
        
         <div id='logo'>
@@ -45,9 +47,10 @@
                 </ul>
 
             </div>
+</body>
+</div>
+<div id="footer">
 
-<ul class='footer'>
-<div class="fixedBar">content inside bar goes here
         <li><a href="jobvacancies.html">Job Vacancies</a></li>
         <li> Address </li>
         <li> Number </li>
@@ -63,5 +66,5 @@
 <p><a href="https://www.shopify.co.uk/pos">POS</a> and <a href="https://www.shopify.co.uk/">Shopify</a></p>
 </ul>
 </div>
-    </body>
+    
 </html>
