--- a/home.html
+++ b/home.html
@@ -57,10 +57,14 @@
 <p> Copyright © 2017 Munchies Cakeaway York </p>
 
 <p> 
-
-
-
 <p><a href="https://www.shopify.co.uk/pos">POS</a> and <a href="https://www.shopify.co.uk/">Shopify</a></p>
+</p>
+<ul class='fixedBar'>
+    <nav>
+    <a href="desktop/project/facebook logo.png" height="30" width="156" /></a>
+    </nav>
+    </ul>    
+
 
 </div>
     </body>
