--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
 </p>
 <ul class='fixedBar'>
     <nav>
-    <a href="desktop/project/facebook logo.png" height="30" width="156" /></a>
+    <a href="desktop/facebook logo.png" height="30" width="156"></a>
     </nav>
     </ul>    
 </div>
