--- a/home.html
+++ b/home.html
@@ -64,11 +64,11 @@
 <p><a href="https://www.shopify.co.uk/pos">POS</a> and <a href="https://www.shopify.co.uk/">Shopify</a></p>
 
 </p>
-<ul class='fixedBar'>
-    <nav>
-    <a href="desktop/facebook logo.png" height="30" width="156"></a>
-    </nav>
-    </ul>    
+<p class='fixedBar'>
+    <img src="desktop/facebook logo.png" 
+    style="width:304px;height:228px;">
+    </p>   
+     
 </div>
     
 </html>
