--- a/home.html
+++ b/home.html
@@ -66,8 +66,7 @@
 
 </p>
 <p class='fixedBar'>
-    <img src="desktop/facebook logo.png" 
-    style="width:304px;height:228px;">
+    <img src="facebook logo.png" style="width:304px;height:228px;">
     </p>   
      
 </div>
