--- a/home.html
+++ b/home.html
@@ -66,8 +66,11 @@
 
 </p>
 <p class='fixedBar'>
+<a href="https://www.facebook.com/munchiescakeawayyork/">
     <img src="facebook logo.png" style="width:30px;height:30px;">
     </p>   
+
+
      
 </div>
     
