--- a/home.html
+++ b/home.html
@@ -65,10 +65,18 @@
 <p><a href="https://www.shopify.co.uk/pos">POS</a> and <a href="https://www.shopify.co.uk/">Shopify</a></p>
 
 </p>
-<p class='fixedBar'>
+<p>
 <a href="https://www.facebook.com/munchiescakeawayyork/">
     <img src="facebook logo.png" style="width:30px;height:30px;">
-    </p>   
+</p>   
+<p>
+<a href="https://www.instagram.com/munchiescakeawayyork/">
+    <img src="instagram logo.png" style="width:30px;height:30px;">
+</p>   
+<p>
+<a href="https://twitter.com/MunchiesYork?lang=en">
+    <img src="twitter logo.png" style="width:30px;height:30px;">
+</p>   
 
 
      
