--- a/home.html
+++ b/home.html
@@ -82,15 +82,15 @@
 </p>
 <p>
 <a href="https://www.facebook.com/munchiescakeawayyork/">
-    <img src="facebook logo.png" style="width:30px;height:30px;">
+    <img src="facebook_logo.png" style="width:30px;height:30px;">
 </p>   
 <p>
 <a href="https://www.instagram.com/munchiescakeawayyork/">
-    <img src="instagram logo.png" style="width:30px;height:30px;">
+    <img src="instagram_logo.png" style="width:30px;height:30px;">
 </p>   
 <p>
 <a href="https://twitter.com/MunchiesYork?lang=en">
-    <img src="twitter logo.png" style="width:30px;height:30px;">
+    <img src="twitter_logo.png" style="width:30px;height:30px;">
 </p>   
 
 
