added about us content

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -17,8 +17,29 @@
         </ul>
 
         <div id='about'>
-            <p>This is the about us page</p>
+            <p><font size = 14>
+            About Us</p></font>
+<p><font color=white>
+Munchies Cakeaway is a new cakes and confections business offering you delicious Home-Made Cakes, Assorted Treats, Milkshakes & Beverages
+</p><p>
+Each and every scrumptious Munchies Cakeaway cake is made to order using fresh ingredients by the master bakers at Munchies HQ. Our recipes use specially imported ingredients, so our cakes are guaranteed to be uniquely tasty – you won’t find our flavour combinations anywhere else!
+</p><p>
+We understand that all you really want to do is to have your cake and eat it, so we’re going to make it easier than ever before for you to do exactly that. There are 3 ways to order, Drop Into Our Shop, Order Online or Order By Phone. Munchies Cakeaway is situated at the very top of Holgate Road, just 30 Seconds walk from Reel Cinema on Blossom Street, so we really couldn’t be easier for you get to. We are open 6pm till late on Thursday, Friday, Saturday & Sunday, meaning that some of the best gosh-darn cake you ever did taste is only a phone call, short drive or a few clicks of a cursor away.
+</p><p>
+Fancy an eyeful of our creations before you buy? Just take a look around our website and have a browse for the cake of your dreams! We also serve a range of lip-smacking milkshakes, along with a carefully selected array of imported drinks and snacks.
+</p><p>
+So go on, indulge yourself with Munchies Cakeaway - you don’t even have to leave the house to get that delicious cake you so richly deserve!
+</p><p>
+<i>MINIMUM SPEND IS £8 (Including delivery cost)</i>
+</p><p>
+ 
 
+Due to the extremely high demand for our cakes, we ask for your patience on the delivery of your food.
+</p><p>
+All our Cakes & Shakes are prepared fresh to order & unlike other takeaways we deliver to the whole of York. During busy periods be prepared to wait up to 90 minutes for the delivery of your food.  YOU CAN COLLECT FROM OUR SHOP. </p><p>
+Thank You.</p><p>
+All our products may contain traces of nuts</p>
+</font>
         </div>
     </body>
 </html>
