--- a/home.html
+++ b/home.html
@@ -55,6 +55,7 @@
                 <p><a href="https://www.shopify.co.uk/pos">POS</a> and <a href="https://www.shopify.co.uk/">Shopify</a></p>
     </div>
 
+<div id="logos">
 <p>
 <a href="https://www.facebook.com/munchiescakeawayyork/">
     <img src="facebook_logo.png" style="width:30px;height:30px;">
