font change + about us edits

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="../munchies.css">
     </head>
     <body>
-       
+       <link href="about_us.css" rel="stylesheet" type="text/css">
         <div id='logo'>
             <a href="../home.html"><img src=../logo.png class="center" alt="logo"></a>
         </div>
@@ -19,6 +19,7 @@
         <div id='about'>
             <p><font size = 14>
             About Us</p></font>
+        <div id='about_text'>
 <p><font color=white>
 Munchies Cakeaway is a new cakes and confections business offering you delicious Home-Made Cakes, Assorted Treats, Milkshakes & Beverages
 </p><p>
@@ -40,6 +41,6 @@ All our Cakes & Shakes are prepared fresh to order & unlike other takeaways we d
 Thank You.</p><p>
 All our products may contain traces of nuts</p>
 </font>
-        </div>
+        </div></p></div>
     </body>
 </html>
