--- a/home.html
+++ b/home.html
@@ -43,8 +43,8 @@
             </div>
         </div>
     </div>
-    <div id="footer">
-
+<div id="footer">
+<div class="text"
             <p><a href="jobvacancies.html">Job Vacancies</a> <br>
             Address <br>
             Number <br>
@@ -55,7 +55,7 @@
                 <p><a href="https://www.shopify.co.uk/pos">POS</a> and <a href="https://www.shopify.co.uk/">Shopify</a></p>
     </div>
 
-<div id="logos">
+<div class="logos">
 <p>
 <a href="https://www.facebook.com/munchiescakeawayyork/">
     <img src="facebook_logo.png" style="width:40px;height:40px;">
