--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -17,8 +17,8 @@
         </ul>
 
         <div id='about'>
-            <p><font size = 14>
-            About Us</p></font>
+            <font size = 14>
+            About Us</font>
         <div id='about_text'>
 <p><font color=white>
 Munchies Cakeaway is a new cakes and confections business offering you delicious Home-Made Cakes, Assorted Treats, Milkshakes & Beverages
